--- a/app/views/user_decks/index.html.erb
+++ b/app/views/user_decks/index.html.erb
@@ -1,74 +1,50 @@
 
+<%# <div class="container-fluid main-container">
+  <div class="row"> %>
+    <%# <div class="col"> %>
+<div class='container my-decks-container'>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Verble</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">My Decks <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
-
-<div class="container-fluid main-container">
-  <div class="row">
-    <div class="col">
-      <div class='container my-decks-container'>
-
-        <% @user_decks.each do | user_deck | %>
-          <div class="row deck-row">
-            <%# <%= link_to user_deck.language, user_deck_path(user_deck.id) %>
-            <div class="row center-block text-center">
-              <div class="col">
-                <%= user_deck.language %>
-              </div>
-              <div class="col">
-                <%= link_to "Show", user_deck_path(user_deck.id) %>
-              </div>
-              <div class="col">
-                <%= link_to "Learn", user_deck_learn_path(user_deck.id) %>
-                <button type="button" class="btn btn-warning">Learn</button>
-              </div>
-              <div class="col">
-                <%# <%= link_to "Review", user_deck_path(user_deck.id) %>
-                <%= link_to "Review", user_deck_review_path(user_deck.id) %>
-                <button type="button" class="btn btn-danger">Review</button>
-              </div>
-            </div>
-          </div>
-          <br>
-        <% end %>
-
+  <% @user_decks.each do | user_deck | %>
+    <div class="row deck-row">
+      <div class="col-sm-2 deck-img-col">
+        <%# add deck image here: %>
+        <img src="placeholder-image.jpg" data-src="aws-image.jpg" class="lazyload" />
       </div>
+      <div class="col deck-info-col">
+        <div class="row deck-row-top-buffer">
+          <div class="col">
+            <%= user_deck.language %>
+          </div>
+        </div>
+        <div class="row">
+
+        </div>
+        <div class="row justify-content-end">
+          <div class="col-sm-2">
+            <%= link_to "Show", user_deck_path(user_deck.id) %>
+          </div>
+          <div class="col-sm-2">
+            <%= link_to "Learn", user_deck_learn_path(user_deck.id) %>
+            <%# <button type="button" class="btn btn-warning">Learn</button> %>
+          </div>
+          <div class="col-sm-2">
+            <%# <%= link_to "Review", user_deck_path(user_deck.id) %>
+            <%= link_to "Review", user_deck_review_path(user_deck.id) %>
+            <%# helper method to return count of review pile %>
+            <%# <%= button_to "Review", user_deck_review_path(user_deck.id) %>
+            <%# <button type="button" class="btn btn-danger">Review</button> %>
+          </div>
+        </div>
+      </div>
+      <%# <%= link_to user_deck.language, user_deck_path(user_deck.id) %>
     </div>
-    <div class="col">
-      Second column
-    </div>
-  </div>
+    <br>
+  <% end %>
+
 </div>
+    <%# </div> %>
+    <%# <div class="col">
+      Second column
+    </div> %>
+  <%# </div>
+</div> %>
