--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar myNavbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">Verble</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -7,7 +7,8 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">My Decks <span class="sr-only">(current)</span></a>
+        <%= link_to "My Decks", user_decks_path%>
+        <%# <a class="nav-link" href="#">My Decks <span class="sr-only">(current)</span></a> %>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="#"> Language <span class="sr-only">(current)</span></a>
