--- a/app/views/user_decks/index.html.erb
+++ b/app/views/user_decks/index.html.erb
@@ -12,24 +12,27 @@
       </div>
       <div class="col deck-info-col">
         <div class="row deck-row-top-buffer">
-          <div class="col">
-            <%= user_deck.language %>
-          </div>
+          <%# <div class="col"> %>
+          <h2><%= user_deck.language %></h2>
+          <%# </div> %>
         </div>
         <div class="row">
-
+          ***Progress bar***
         </div>
         <div class="row justify-content-end">
           <div class="col-sm-2">
-            <%= link_to "Show", user_deck_path(user_deck.id) %>
+            <%# <%= link_to "Show", user_deck_path(user_deck.id) %>
+            <%= button_to "Show", user_deck_path(user_deck.id), method: :get %>
           </div>
           <div class="col-sm-2">
-            <%= link_to "Learn", user_deck_learn_path(user_deck.id) %>
+            <%# <%= link_to "Learn", user_deck_learn_path(user_deck.id) %>
+            <%= button_to "Learn", user_deck_learn_path(user_deck.id), method: :get %>
             <%# <button type="button" class="btn btn-warning">Learn</button> %>
           </div>
           <div class="col-sm-2">
             <%# <%= link_to "Review", user_deck_path(user_deck.id) %>
-            <%= link_to "Review", user_deck_review_path(user_deck.id) %>
+            <%# <%= link_to "Review", user_deck_review_path(user_deck.id) %>
+            <%= button_to "Review", user_deck_review_path(user_deck.id), method: :get %>
             <%# helper method to return count of review pile %>
             <%# <%= button_to "Review", user_deck_review_path(user_deck.id) %>
             <%# <button type="button" class="btn btn-danger">Review</button> %>
