--- a/app/views/user_decks/review.html.erb
+++ b/app/views/user_decks/review.html.erb
@@ -1,5 +1,5 @@
 
-<h1><%= @user_deck.language %></h1>
+<%# <h1><%= @user_deck.language</h1> %>
 
 <%# <%= @user_deck.id %>
 
@@ -35,67 +35,63 @@
 
   <div class="flashcard-container">
     <div class="flashcard">
-      <div class="flashcard-front">
-        <div class="row flashcard-row">
+      <div class="row flashcard-definition">
+        <div class="col" style="border-right: 1px solid #ccc;" >
           <%= top_flashcard.question %>
         </div>
-        <div class="row flashcard-row">
-        </div>
-        <div class="row flashcard-row">
-          <%# I think this should be target_sentence instead when it's testing Eng->Ru %>
-          <%= sanitize top_flashcard.source_sentence %>
-        </div>
-        <div class="row flashcard-row">
-        </div>
-      </div>
-      <div class="flashcard-back">
-        <div class="row flashcard-row">
-          <%= top_flashcard.question %>
-        </div>
-        <div class="row flashcard-row">
+        <div class="col">
+          <input type="text">
+          <br>
           <%= top_flashcard.answer %>
         </div>
-        <div class="row flashcard-row">
+      </div>
+      <div class="row align-items-end flashcard-example-sentences">
+        <div class="col" style="border-right: 1px solid #ccc;" >
           <%= sanitize top_flashcard.source_sentence %>
         </div>
-        <div class="row flashcard-row">
+        <div class="col">
           <%= sanitize top_flashcard.target_sentence %>
         </div>
       </div>
-      <div class="row flashcard-row border bg-light">
+      <div class= "row answer-buttons-row justify-content-center">
+        <div class="row g-2">
+          <%# <div class="col offset-md-3"> %>
+            <button id="show-answer-button">
+              Show answer
+            </button>
+            <i class="fa-solid fa-eye"></i>
+            <%= javascript_pack_tag 'flipFlashcard' %>
+
+            <%#= link_to "Show answer", show_answer_path, remote: true %>
+
+            <%# <div id="content"> %>
+            <%# </div> %>
+
+          <%# </div> %>
+        </div>
+        <div class="row">
+          <%# <div class="col offset-md-3"> %>
+            <%# <button>Incorrect</button> %>
+            <%= button_to "Incorrect", update_review_user_flashcard_path(top_user_flashcard, answer_correct: false), method: :patch %>
+            <i class="fa-solid fa-circle-xmark"></i>
+            <%# Edit current user_flashcard with new due review and redirect back to this view %>
+            <%# <button>Correct</button> %>
+            <%# Edit current user_flashcard with new due review and redirect back to this view: %>
+            <%# <%= button_to "Correct", update_review_user_flashcard_path(top_user_flashcard, answer_correct: true), method: :patch %>
+            <%= button_to raw("<i class=\"fa-solid fa-circle-check\"></i>"), update_review_user_flashcard_path(top_user_flashcard, answer_correct: true), method: :patch %>
+            <%= javascript_pack_tag 'correctAnswer' %>
+            <%# <%= link_to "Correct", update_review_user_flashcard_path(top_user_flashcard), method: :patch %>
+          <%# </div> %>
+        </div>
       </div>
     </div>
   </div>
-    <div class= "row answer-buttons-row justify-content-center">
-      <div class="row g-2">
-        <%# <div class="col offset-md-3"> %>
-          <button id="show-answer-button">
-            Show answer
-          </button>
-          <%= javascript_pack_tag 'flipFlashcard' %>
-
-          <%#= link_to "Show answer", show_answer_path, remote: true %>
-
-          <%# <div id="content"> %>
-          <%# </div> %>
-
-        <%# </div> %>
-      </div>
-      <div class="row">
-        <%# <div class="col offset-md-3"> %>
-          <%# <button>Incorrect</button> %>
-          <%= button_to "Incorrect", update_review_user_flashcard_path(top_user_flashcard, answer_correct: false), method: :patch %>
-          <%# Edit current user_flashcard with new due review and redirect back to this view %>
-          <%# <button>Correct</button> %>
-          <%# Edit current user_flashcard with new due review and redirect back to this view: %>
-          <%= button_to "Correct", update_review_user_flashcard_path(top_user_flashcard, answer_correct: true), method: :patch %>
-          <%# <%= link_to "Correct", update_review_user_flashcard_path(top_user_flashcard), method: :patch %>
-        <%# </div> %>
-      </div>
-    </div>
-  <br>
 <% else %>
-  <h2>All caught up!</h2>
+  <div id="all-caught-up">
+    <%# <i class="fa-solid fa-hot-tub-person fa-8x"></i> %>
+    <i class="fa-solid fa-face-grin-stars fa-8x"></i>
+    <h2>All caught up!</h2>
+  </div>
 <% end %>
 
 
