--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,22 +1,40 @@
-<nav class="navbar myNavbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar myNavbar navbar-expand-lg">
   <a class="navbar-brand" href="#">Verble</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <%= link_to "My Decks", user_decks_path%>
-        <%# <a class="nav-link" href="#">My Decks <span class="sr-only">(current)</span></a> %>
+        <%# <%= link_to "My Decks", user_decks_path%>
+        <a class="nav-link" href="/user_decks"> My Decks <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
+        <%# <%= link_to "My Decks", user_decks_path%>
+        <a class="nav-link" href="/user_decks"> Browse Decks <span class="sr-only">(current)</span></a>
+      </li>
+      <%# <li class="nav-item active">
         <a class="nav-link" href="#"> Language <span class="sr-only">(current)</span></a>
+      </li> %>
+    </ul>
+    <% if @user_deck %>
+      <ul class="navbar-nav mx-auto">
+        <li class="nav-item active">
+          <a class="nav-link"> <%= @user_deck.language %> <span class="sr-only">(current)</span></a>
+        </li>
+      </ul>
+    <% end %>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#"> Mark <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="#"> Log out <span class="sr-only">(current)</span></a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
+    <%# <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    </form> %>
   </div>
 </nav>
